# aMU_Arles_C_Plus_Plus_Projects

./: .gitignore  README.md  compile_commands.json
C++/: g++OnWindows.docx  testHelloWorldProgram  testHelloWorldProgram.cpp  todo.md  utils.cpp  utils.hpp
C++/ExpectExercises/: moyenne  moyenne.cpp  moyenne.exp  test_app  test_expected.cpp
C++/Lecture_Et_Ecriture_De_Fichier_De_Texte_En_C++/: AlanTuring.txt  fileSystemTests  fileSystemTests.cpp  file_test.txt  getLineMethod  getLineMethod.cpp  lire  lire.cpp  operateursupsup  operateursupsup.cpp  parcourirFileSystemTest  parcourirFileSystemTest.cpp  write  write.cpp
C++/S1-02/: main.cpp  sort.hpp  sort4.cpp  sort6.cpp  testmainInsertionTri  testmainSelectionTri
C++/S1-02/measuringTime/: main.cpp  (+1 more)
C++/Semester2/qualiteDev/TP1/EZChesspp/: AbstractPiece.cpp  CMakeLists.txt  EZChess  Makefile  ez-draw++.hpp
C++/TD04/: ex1  ex1-3.cpp  ex1.cpp  ex2.cpp
C++/TD10/: rpn_calculator.txt
C++/TD2/: ex01  ex01.cpp  ex2  ex2.cpp  ex3-1  ex3-1.cpp  ex3-2  ex3-2.cpp  ex4-1  ex4-1.cpp  ex4-2  ex4-2.cpp  ex4-3  ex4-3.cpp  ex5-1.cpp  ex5-2.cpp
C++/TD3/: ex1  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp
C++/TD6/: ex1  ex1.cpp
C++/TD7/: tm.cpp  tm.hpp
C++/TD8/: main.cpp  outils.cpp  outils.hpp
C++/TD9/: data.txt  main.cpp
C++/TP0/: ex03  ex03.cpp
C++/TP1ET2/: dollarCan_To_Euro.cpp  euro_To_DollarCan.cpp  ex01  ex01.cpp  ex02  ex02.cpp  ex03  ex03.cpp  ex04  ex04.cpp  ex05  ex05-1  ex05-1.cpp  ex05.cpp
C++/TP8ET9/: String.cpp  String.hpp  bonjour  ex1  ex1.cpp  ex2.cpp  ex3  ex3.cpp  ex4.cpp
C++/lectureExo4/: test
(+69 files in other folders)
